# HZMZ

./: .gitignore  Anchor.toml  Connect to AZURE or AWS  Create HZ Music Tokens for Test Net  HZ Music Features  Homepage Instructions for HZ Music Platform  How To Deploy on Solana  Integrate Chainlink  Lending Protocol Instructions  Liquidity Pool Instructions  Music Royalty System  NFT Minting, Staking, and Uploading  README.md  RENVM Bridge Swap Protocol  Recommendations  SECURITY.md  Send & receive HZ Tokens  Social Media Connectivity  Staking Protocol  package.json
hzmz/: package-lock.json  package.json
programs/solana_shrimp/: Cargo.toml
programs/solana_shrimp/src/: error.rs  helpers.rs  lib.rs  state.rs
programs/solana_shrimp/src/instructions/: dev_withdraw.rs  finalize.rs  initialize.rs  mint_nft.rs  mint_nftcollection.rs  mod.rs  set_collection.rs
tests/: constants.ts  solana_nft.ts  solana_shrimp.ts  utils.ts
