[package]
name = "solana_nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"]}
solana-program = "1.10.32"
borsh = "0.10.1"
borsh-derive = "0.10.1"
num-derive = "0.3" # Use the version compatible with your project
num-traits = "0.2" # Use the version compatible with your project
thiserror = "1.0" # Use the version compatible with your project
serde = { version = "1.0", optional = true }
solana-security-txt = "1.1"

anchor-spl = {version = "0.26.0"}

mpl-token-metadata = { version = "1.9", features = ["no-entrypoint"] }